[package]
name = "SimpleAsyncTcp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = "=0.3.0-alpha.17"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
thread_local = "1.1.3"
mio = "0.6.8"
tokio = { version = "0.2", features = ["full"] }
byteorder = "1.4.3"
unicycle = { git = "https://github.com/sujayakar/unicycle", rev = "44c0e8f62cb9355cfd35ef5309abf10a4c388b62" }
bit-iter = "0.1.3"
nix = "0.17.0"
libc = "0.2.106"


